--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.CNC_CODE_GENERATOR_APP"
         tools:targetApi="31">
         <activity
-            android:name=".ProgramStartingInformation"
+            android:name=".SaveProgramToFolderActivity"
             android:exported="false" />
         <activity
-            android:name=".StartNewProgram"
+            android:name=".ProgramStartingInformationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StartNewProgramActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
