--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.CNC_CODE_GENERATOR_APP"
         tools:targetApi="31">
         <activity
+            android:name=".FacingCycleDownDirActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FacingCycleActivity"
+            android:exported="false" />
+        <activity
             android:name=".SaveProgramToFolderActivity"
             android:exported="false" />
         <activity
