Internal Roughing Cycles Completed all the logic of Roughing Cycles Completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         <activity
             android:name=".RoughingCycles.InternalRoughingCycles.InternalRoughingCycle_X_Direction_G72"
             android:exported="false" />
+        <activity android:name=".RoughingCycles.InternalRoughingCycles.InternalRoughingCycle_X_DirApproach"
+            android:exported="false"/>
         <activity
             android:name=".RoughingCycles.InternalRoughingCycles.InternalRoughingCycle_Z_DirApproach"
             android:exported="false" />
